yamlConfig/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-simple-build
spec:
  selector:
    app: python-simple-build
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
