yamlConfig/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: python-simple-build-route
spec:
  to:
    kind: Service
    name: python-simple-build
  port:
    targetPort: 8080-tcp
